# slinky

./: AGENTS.md  Cargo.toml  README.md
docs/: design.md  worklog.md
scripts/: testnet.py
src/: cli.rs  core.rs  device.rs  engine.rs  index.rs  lib.rs  main.rs  relay.rs  runtime.rs  services.rs
src/local/: blob_store.rs  chunker.rs  config.rs  coordinator.rs  meta_store.rs  mod.rs  obj_store.rs  reconciler.rs  relay.rs  scanner.rs  snapshot.rs  tree.rs  util.rs  watcher.rs  worker.rs
